# kpopbuddy-agent-openai-sdk

./: .env  Aioutput.md  README.md  pyproject.toml
src/kpop_agent/: __init__.py  helloAI.py
